# TwinPairs.Next

./: .gitignore  LICENSE
TwinPairs/: TwinPairs.sln
TwinPairs.Python/: readme.md
TwinPairs.Python/.devcontainer/: devcontainer.json
TwinPairs.Python/TwinPairs-Web-Api/: pyproject.toml  todo.txt
TwinPairs.Python/TwinPairs-Web-Api/tests/: game_test.py  play_field_test.py  player_test.py
TwinPairs.Python/TwinPairs-Web-Api/twinpairs_web_api/app/: ioc.py  main.py
TwinPairs.Python/TwinPairs-Web-Api/twinpairs_web_api/app/controllers/: game_controller.py
TwinPairs.Python/TwinPairs-Web-Api/twinpairs_web_api/app/models/: game_model.py
TwinPairs.Python/TwinPairs-Web-Api/twinpairs_web_api/domain/: card.py  game.py  game_phase.py  game_service.py  motif.py  move.py  play_field.py  player.py  player_service.py  simple_player.py
TwinPairs/TwinPair.Service/: Program.cs  TwinPair.Service.csproj
TwinPairs/TwinPairs.Core/: GameGrain.cs  PairingGrain.cs  PlayerGrain.cs  TwinPairs.Core.csproj
TwinPairs/TwinPairs.Interfaces/: Enums.cs  IGameGrain.cs  IPairingGrain.cs  IPlayerGrain.cs  TwinPairs.Interfaces.csproj
TwinPairs/TwinPairs.Web/: Program.cs  Startup.cs  TwinPairs.Web.csproj  npm-shrinkwrap.json  package.json
TwinPairs/TwinPairs.Web/ClientApp/app/components/home/: home.component.html  home.component.ts
TwinPairs/TwinPairs.Web/Controllers/: GameController.cs  HomeController.cs  SampleDataController.cs
TwinPairs/TwinPairs.Web/Views/: _ViewImports.cshtml
TwinPairs/TwinPairs.Web/Views/Shared/: _Layout.cshtml
(+1 files in other folders)
