[tool.poetry]
name = "twinpairs-web-api"
version = "0.1.0"
description = ""
authors = ["DerHulk <thegrayhulk@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.5"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"